--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,22 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_appli"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo_appli_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RIEn">
         <activity
-            android:name=".LauncherActivity"
+            android:name=".InfoActivity"
             android:exported="true" />
         <activity
-            android:name=".RechercheParDepartementActivity"
+            android:name=".RechercheParActiviteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".LauncherActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RechercheParEntrepriseActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
