--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RIEn">
         <activity
+            android:name=".EntrepriseArchiveeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".HistoryActivity"
+            android:exported="true" />
+        <activity
             android:name=".EntrepriseEntityActivity"
             android:exported="true" />
         <!--
