--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo_appli"
+        android:icon="@mipmap/ic_main_logo_appli_rien"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_appli_round"
         android:supportsRtl="true"
