--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_main_logo_appli_rien"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo_appli_round"
+        android:roundIcon="@mipmap/ic_main_logo_appli_rien_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RIEn">
         <activity
